force-app/main/default/objects/Vendor__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address of where the vendor is located.</description>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>