force-app/main/default/objects/Vendor__c/fields/Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Auth_Code__c</fullName>
    <description>Authorization code for the vendor.</description>
    <label>Auth Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>