force-app/main/default/objects/Vendor__c/fields/Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_1__c</fullName>
    <description>The contact of someone at the vendor&apos;s company.</description>
    <label>Contact 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>