force-app/main/default/objects/Vendor__c/fields/Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_2__c</fullName>
    <description>The contact of someone at the vendor&apos;s company.</description>
    <label>Contact 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>