force-app/main/default/objects/Vendor__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>The contract number we have with the vendor.</description>
    <label>Contract Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>