force-app/main/default/objects/Vendor__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country of where the vendor is located.</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>