force-app/main/default/objects/Vendor__c/fields/Direct_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Direct_Line_2__c</fullName>
    <description>The phone number of the vendor.</description>
    <label>Direct Line 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>