force-app/main/default/objects/Vendor__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Zip code of where the vendor is located.</description>
    <label>Zip Code</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>